# BUTT

./: .gitignore  .tags  .tags1  CMakeLists.txt  README.md  tags
BUTT/: .tags1  BUTT.pro  CMakeLists.txt  Common.h  Fasta.cpp  Fasta.h  FastaParser.cpp  FastaParser.h  Makefile  SeqToKMers.cpp  SeqToKMers.h  TaxBuilder.cpp  TaxBuilder.h  TaxNode.cpp  TaxNode.h  main.cpp
BUTT/Index/: TaxBuilder.cpp  TaxBuilder.h  TaxNode.cpp  TaxNode.h
BUTT/Search/: CleverTaxConsensus.cpp  CleverTaxConsensus.h  NameNode.cpp  NameNode.h  SimpleTaxConsensus.cpp  SimpleTaxConsensus.h  TaxConsensus.cpp  TaxConsensus.h  TaxLevel.cpp  TaxLevel.h  TaxSearch.cpp  TaxSearch.h
BUTT/Tests/: TestAll.cpp  TestAll.h  TestCleverTaxConsensus.cpp  TestCleverTaxConsensus.h  TestFasta.cpp  TestFasta.h  TestHelper.cpp  TestHelper.h  TestSeqToKMers.cpp  TestSeqToKMers.h  TestSimpleConsensus.cpp  TestSimpleConsensus.h  TestSimpleTaxConsensus.cpp  TestSimpleTaxConsensus.h  TestTaxBuilder.cpp  TestTaxBuilder.h  TestTaxSearch.cpp  TestTaxSearch.h
BUTT/Tests/Fastas/: test1.fasta  test2.fasta  test3.fasta  test4.fasta  test5.fasta  test6.fasta  test7.fasta
